--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,6 +1,9 @@
     html,
     body {
+        max-width: 1520px;
         height: 100%;
+        margin: 0 auto;
+        font-size: 10px;
         font-family: Inter;
     }
 
@@ -8,11 +11,12 @@
     textarea,
     input {
         color: #000;
+        font-size: 2.5rem;
     }
 
     textarea::placeholder,
     input::placeholder {
-        color: #5F5F5F;
+        color: #000;
     }
 
     .app {
@@ -21,8 +25,12 @@
         height: 100%;
     }
 
+
     /* ヘッダー */
     .header {
+        display: flex;
+        align-items: center;
+        padding: 16px 0;
         height: 80px;
         background-color: #000;
     }
@@ -36,26 +44,27 @@
         display: flex;
         flex-direction: column;
         flex-grow: 1;
-        justify-content: center;
-        padding: 48px;
+        padding-top: 70px;
     }
 
     .content__heading {
         text-align: center;
         font-weight: 700;
         line-height: 45px;
-        font-size: 36px;
+        font-size: 3.5rem;
     }
 
     /* ボタン */
     .btn {
         display: block;
-        width: 100px;
-        height: 50px;
+        width: 680px;
+        height: 65px;
         padding: 8px 32px;
-        background-color: #fff;
-        color: #000;
-        font-size: 20px;
-        border-radius: 4px 0px 0px 0px;
+        background-color: #ff5555;
+        color: #fff;
+        font-size: 2.5rem;
+        font-weight: bold;
+        border-radius: 4px;
         cursor: pointer;
     }
+
