--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -40,69 +40,146 @@ a {
     border-radius: 4px;
 }
 
+/*商品詳細*/
 .item-details {
     display: flex;
     padding: 20px;
+    margin: 0 auto;
 }
 
 .item-image img {
-    width: 700px;
-    height: 700px;
+    width: 400px;
+    height: 400px;
     object-fit: cover;
 }
 
-.item-info {
-    margin-left: 20px;
+.item-detail {
+    margin-left: 50px;
 }
 
-.actions {
+.brand {
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.price {
+    font-size: 3rem;
+}
+
+.item-purchase__group {
     display: flex;
     flex-direction: column;
-    /* 全体を縦並びにする */
     align-items: flex-start;
     gap: 8px;
-    /* 各要素間のスペース */
 }
 
-.info {
+.item-purchase__group-item {
     display: flex;
-    /* 横並びにする */
+    margin: 5px 30px;
     gap: 30px;
-    /* 各<span>間のスペース */
+}
+
+.item-purchase__group-item span {
+    margin-left: 30px;
+    text-align: center;
+}
+
+.item-purchase__group-item .icon {
+    display: block;
+    margin: 0 auto;
+}
+
+.item-purchase__group-item .count {
+    display: block;
+    margin-top: 5px;
 }
 
 .icon {
     width: 40px;
-    /* 適切なサイズに変更 */
-    height: auto;
+    height: 40px;
     vertical-align: middle;
-    margin-right: 4px;
-    /* テキストとの間隔 */
+    margin: 10px 20px 0 20px;
+    object-fit: cover;
 }
 
-.purchase-button {
-    background-color: #f54;
-    color: white;
+.status__group {
+    line-height: 30px;
+}
+
+.category__group {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.category-item {
+    display: flex;
+    margin-left: 50px;
+}
+
+.category {
+    display: inline-block;
+    padding: 0px 20px;
+    background-color: #D9D9D9;
+    border-radius: 30px;
+    color: #000;
+    font-size: 1.8rem;
+    text-align: center;
+
+}
+
+.btn {
     padding: 10px 20px;
+    width: 100%;
+    background-color: #FF5555;
+    color: white;
+    font-weight: bold;
     border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-.description,
-.additional-info,
+.item__description,
+.item__additional-info,
 .comments-section {
     margin-top: 20px;
+    line-height: 50px;
+}
+
+.comment-view {
+    margin-bottom: 20px;
+}
+
+/* 画像表示枠を丸型にし、画像が設定されていない場合はグレー色に */
+.profile-img__inner {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.profile-img__item {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile-img__item--no-image {
+    background-color: #D9D9D9;
+    width: 70px;
+    height: 70px;
+}
+
+.comments-section textarea {
+    display: block;
+    width: 100%;
+    height: 250px;
+    margin-bottom: 25px;
+    border: 2px solid #5F5F5F;
 }
 
 .comment-submit-button {
-    background-color: #f54;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
+    display: inline-block;
 }
-
-
 
 @media screen and (max-width: 850px) {
     .header-container {
