--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -184,6 +184,61 @@ select {
     pointer-events: none;
 }
 
+.other-detail {
+    display: flex;
+    align-items: center;
+}
+
+.radio-options {
+    display: flex;
+    margin: 10px 0 0 30px;
+    gap: 30px
+}
+
+/* ラジオボタンが選択されたときの色を変更 */
+input[type="radio"]:checked {
+    background-color: #5F5F5F;
+    border-color: #5F5F5F;
+}
+
+/* ラジオボタンの外観をカスタマイズ */
+input[type="radio"] {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid #5F5F5F;
+    position: relative;
+    cursor: pointer;
+    background-color: #fff;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+input[type="radio"]:checked::before {
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #5F5F5F;
+}
+
+.status-group label {
+    display: block;
+    margin-right: 50px;
+}
+
+.color-input {
+    width: 80%;
+        padding: 10px 30px;
+        font-size: 2rem;
+        border: 1px solid #5F5F5F;
+        border-radius: 4px;
+}
+
+.brand-input,
 .sell-input {
     width: 100%;
     padding: 10px 30px;
@@ -230,5 +285,16 @@ select {
         flex-wrap: wrap;
 
         gap: 10px;
+    }
+
+    .other-detail {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .radio-options {
+        display: flex;
+        margin: 0 0 10px 0px;
+        gap: 30px
     }
 }
