データベース構築～マイページ作成

--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -65,6 +65,20 @@ a {
     height: 70px;
 }
 
+.user-info {
+    flex-grow: 1;
+    margin-left: 20px;
+}
+
+.user-name {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+.user-rating {
+    display: flex;
+}
+
 .profile__edit__group {
     margin-left: 200px;
 }
@@ -85,6 +99,8 @@ a {
 }
 
 .profile__tab-menu {
+    display: flex;
+    align-items: center;
     border-bottom: 1px solid #000;
 }
 
@@ -99,10 +115,27 @@ a {
 .profile__tab {
     margin-left: 150px;
     color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile__tab.active {
     color: #FF0000;
+}
+
+.count-badge {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+    margin-left: 5px;
+    background-color: #ff0000;
+    color: #fff;
+    border-radius: 50%;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 .item-content {
