出品者用チャット画面作成中

--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -19,6 +19,10 @@
     margin-bottom: 32px;
 }
 
+.login-form__heading {
+    padding-top: 70px;
+}
+
 .login-form__label {
     display: block;
     margin-bottom: 8px;
