--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -68,6 +68,7 @@ select option:checked {
 .purchase-container {
     width: 100%;
     margin: 0;
+    padding-top: 70px;
     display: flex;
     justify-content: center;
 }
