--- a/src/public/css/purchase_address.css
+++ b/src/public/css/purchase_address.css
@@ -35,6 +35,10 @@
     border-radius: 4px;
 }
 
+.edit-form__heading {
+    padding-top: 70px;
+}
+
 .edit-form__inner {
     display: flex;
     justify-content: center;
