--- a/src/public/css/chat_seller.css
+++ b/src/public/css/chat_seller.css
@@ -209,7 +209,7 @@ a {
     font-size: 1.6rem;
 }
 
-/* モーダル全体 */
+/* モーダル画面 */
 .modal {
     display: none;
     position: fixed;
@@ -222,7 +222,6 @@ a {
     align-items: center;
 }
 
-/* モーダルの中身 */
 .modal-content {
     background: #fff3da;
     padding: 20px;
@@ -232,12 +231,10 @@ a {
     position: relative;
 }
 
-/* モーダル開閉用チェックボックス */
 .modal-toggle:checked+.modal {
     display: flex;
 }
 
-/* モーダルの閉じるボタン */
 .close {
     position: absolute;
     top: 15px;
@@ -246,29 +243,24 @@ a {
     cursor: pointer;
 }
 
-/* モーダルのタイトル */
 .modal-title {
     font-size: 2.5rem;
     margin-bottom: 15px;
 }
 
-/* 質問文 */
 .modal-question {
     font-size: 1.5rem;
     color: #bebebe;
     padding-top: 10px;
 }
 
-/* 星評価部分 */
 .stars {
     display: flex;
     flex-direction: row-reverse;
-    /* 星を右から左に並べる */
     justify-content: center;
     margin: 20px 0;
 }
 
-/* 星の見た目 */
 .stars input[type="radio"] {
     display: none;
 }
@@ -280,19 +272,15 @@ a {
     transition: color 0.2s;
 }
 
-/* 星を選択したら色を変える */
 .stars input[type="radio"]:checked~label {
     color: #ffdc16;
-    /* ゴールド色 */
 }
 
-/* 送信ボタンエリア */
 .submit-area {
     margin-top: 20px;
     text-align: right;
 }
 
-/* 送信ボタン */
 .submit-btn {
     background-color: #FF8282;
     color: #fff;
