--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,67 +1,75 @@
-    html,
-    body {
-        max-width: 1520px;
-        height: 100%;
-        margin: 0 auto;
-        font-size: 10px;
-        font-family: Inter;
-    }
+html,
+body {
+    height: 100%;
+    margin: 0;
+    font-size: 10px;
+    font-family: Inter;
+}
 
-    body,
-    textarea,
-    input {
-        color: #000;
-        font-size: 2.5rem;
-    }
+body,
+textarea,
+input {
+    color: #000;
+    font-size: 2.5rem;
+}
 
-    textarea::placeholder,
-    input::placeholder {
-        color: #000;
-    }
+textarea::placeholder,
+input::placeholder {
+    color: #000;
+}
 
-    .app {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-    }
+.app {
+    max-width: 1540px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 
-    .header {
-        display: flex;
-        align-items: center;
-        padding: 16px 0;
-        height: 80px;
-        background-color: #000;
-    }
+.header {
+    display: flex;
+    align-items: center;
+    padding: 16px 0;
+    height: 80px;
+    background-color: #000;
+}
 
-    .header__logo {
-        margin: 25px;
-    }
+.header__logo {
+    margin: 25px;
+    height: 30px;
+    width: auto;
+}
 
-    .content {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-    }
+.content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    min-height: 1px;
+}
 
-    .content__heading {
-        text-align: center;
-        font-weight: 700;
-        line-height: 45px;
-        font-size: 3.5rem;
-    }
+.content__heading {
+    text-align: center;
+    font-weight: 700;
+    line-height: 45px;
+    font-size: 3.5rem;
+}
 
+.btn {
+    display: block;
+    width: 680px;
+    height: 65px;
+    padding: 8px 32px;
+    background-color: #ff5555;
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+@media (max-width: 850px) {
     .btn {
-        display: block;
-        width: 680px;
-        height: 65px;
-        padding: 8px 32px;
-        background-color: #ff5555;
-        color: #fff;
-        font-size: 2.5rem;
-        font-weight: bold;
-        border-radius: 4px;
-        cursor: pointer;
+        width: 90%;
     }
-
-
+}
